--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -5,80 +5,55 @@
 $DEBUG = 0; 
 
 %extraopts = (
-    Sensor1 => {
-        rrdfile => "/proj/wetter/logs/Sensor1.rrd"
+    windsensor => {
+        rrdfile => "/proj/wetter/logs/wmr9x8/windsensor.rrd"
     },
-    Sensor3 => {
-        rrdfile => "/proj/wetter/logs/Sensor3.rrd"
+    rainsensor => {
+        rrdfile => "/proj/wetter/logs/wmr9x8/rainsensor.rrd"
     },
-    Sensor5 => {
-        rrdfile => "/proj/wetter/logs/Sensor5.rrd"
+    thin_sensor => {
+        rrdfile => "/proj/wetter/logs/wmr9x8/thin_sensor.rrd"
     },
-    Rainsensor => {
-        rrdfile => "/proj/wetter/logs/Rainsensor.rrd"
+    thout_sensor => {
+        rrdfile => "/proj/wetter/logs/wmr9x8/thout_sensor.rrd"
     },
-    Windsensor => {
-        rrdfile => "/proj/wetter/logs/Windsensor.rrd"
+    tin_sensor => {
+        rrdfile => "/proj/wetter/logs/wmr9x8/tin_sensor.rrd"
     },
-    Indoorsensor => {
-        rrdfile => "/proj/wetter/logs/Indoorsensor.rrd"
+    thb_sensor => {
+        rrdfile => "/proj/wetter/logs/wmr9x8/thb_sensor.rrd"
+    },
+    thbnew_sensor => {
+        rrdfile => "/proj/wetter/logs/wmr9x8/thbnew_sensor.rrd"
     }
 );
 
 %createopts = ( 
-    Temp4 => {
+    windsensor => {
         "--start" => 973709200,
         "--step"  => 300,
     },
-    Humidity4 => {
+    rainsensor => {
         "--start" => 973709200,
         "--step"  => 300,
     },
-    PressureI => {
+    thin_sensor => {
         "--start" => 973709200,
         "--step"  => 300,
     },
-    TempI => {
+    thout_sensor => {
         "--start" => 973709200,
         "--step"  => 300,
     },
-    HumidityI => {
+    tin_sensor => {
         "--start" => 973709200,
         "--step"  => 300,
     },
-    Outdoor16 => {
+    thb_sensor => {
         "--start" => 973709200,
         "--step"  => 300,
     },
-    Outdoor18 => {
-        "--start" => 973709200,
-        "--step"  => 300,
-    },
-    Outdoor28 => {
-        "--start" => 973709200,
-        "--step"  => 300,
-    },
-    Sensor1 => {
-        "--start" => 973709200,
-        "--step"  => 300,
-    },
-    Sensor3 => {
-        "--start" => 973709200,
-        "--step"  => 300,
-    },
-    Sensor5 => {
-        "--start" => 973709200,
-        "--step"  => 300,
-    },
-    Rainsensor => {
-        "--start" => 973709200,
-        "--step"  => 300,
-    },
-    Windsensor => {
-        "--start" => 973709200,
-        "--step"  => 300,
-    },
-    Indoorsensor => {
+    thbnew_sensor => {
         "--start" => 973709200,
         "--step"  => 300,
     }
@@ -86,55 +61,71 @@ $DEBUG = 0;
 
 
 %createdefs = (
-    Sensor1 => [
-       "DS:Temperature:GAUGE:600:-30:70",
-       "DS:Humidity:GAUGE:600:0:100",
+    windsensor => [
+       "DS:wind_direction:GAUGE:600:0:360",
+       "DS:gust_windspeed:GAUGE:600:0:56",
+       "DS:average_windspeed:GAUGE:600:0:56",
+       "DS:windchill:GAUGE:600:-52:60",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    Sensor3 => [
-       "DS:Temperature:GAUGE:600:-30:70",
-       "DS:Humidity:GAUGE:600:0:100",
+    rainsensor => [
+       "DS:current_rainrate:GAUGE:600:-30:70",
+       "DS:total_rainfall:GAUGE:600:0:100",
+       "DS:yesterday_rainfall:GAUGE:600:0:100",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    Sensor5 => [
-       "DS:Temperature:GAUGE:600:-30:70",
-       "DS:Humidity:GAUGE:600:0:100",
+    thin_sensor => [
+       "DS:temperature:GAUGE:600:-5:50",
+       "DS:humidity:GAUGE:600:25:90",
+       "DS:dew_temperature:GAUGE:600:0:49",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    Rainsensor => [
-       "DS:Rainfall:GAUGE:600:0:3999",
+    thout_sensor => [
+       "DS:temperature:GAUGE:600:-20:60",
+       "DS:humidity:GAUGE:600:25:90",
+       "DS:dew_temperature:GAUGE:600:-10:60",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    Windsensor => [
-       "DS:Windspeed:GAUGE:600:0:100",
-       "DS:Winddirection:GAUGE:600:0:360",
-       "DS:Windvariation:GAUGE:600:0:3",
+    tin_sensor => [
+       "DS:temperature:GAUGE:600:-5:50",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    Indoorsensor => [
-       "DS:Pressure:GAUGE:600:800:1100",
-       "DS:Temperature:GAUGE:600:-30:70",
-       "DS:Humidity:GAUGE:600:0:100",
+    thb_sensor => [
+       "DS:temperature:GAUGE:600:-5:50",
+       "DS:humidity:GAUGE:600:25:90",
+       "DS:dew_temperature:GAUGE:600:0:49",
+       "DS:pressure:GAUGE:600:795:1050",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
+    thbnew_sensor => [
+       "DS:temperature:GAUGE:600:-5:50",
+       "DS:humidity:GAUGE:600:25:90",
+       "DS:dew_temperature:GAUGE:600:0:49",
+       "DS:pressure:GAUGE:600:795:1050",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
@@ -144,27 +135,31 @@ $DEBUG = 0;
 );
 
 %fetchopts = (
-   Sensor1 =>  {
+   windsensor =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   Sensor3 =>  {
+   rainsensor =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   Sensor5 =>  {
+   thin_sensor =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   Rainsensor =>  {
+   thout_sensor =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   Windsensor =>  {
+   tin_sensor =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   Indoorsensor =>  {
+   thb_sensor =>  {
+      "--start" => "-6000",
+      LAST      => undef
+   },
+   thbnew_sensor =>  {
       "--start" => "-6000",
       LAST      => undef
    }
@@ -285,5 +280,6 @@ $DEBUG = 0;
 );
 
 
-@Sensors    = ( "Indoorsensor", "Windsensor", "Rainsensor" );
-#@Sensors    = ( "Indoorsensor" );
+#@Sensors    = ( "windsensor", "rainsensor", "thin_sensor", "thout_sensor", "thbnew_sensor" );
+@Sensors    = ( "windsensor" );
+$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
