--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -6,7 +6,7 @@ $DEBUG = 0;
 
 %extraopts = (
     windsensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/windsensor.rrd"
+        rrdfile => "/usr/local/wth/windsensor.rrd"
     },
     rainsensor => {
         rrdfile => "/proj/wetter/logs/wmr9x8/rainsensor.rrd"
@@ -282,4 +282,4 @@ $DEBUG = 0;
 
 #@Sensors    = ( "windsensor", "rainsensor", "thin_sensor", "thout_sensor", "thbnew_sensor" );
 @Sensors    = ( "windsensor" );
-$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
+$WthDatabase = "/usr/local/wth/wmr9x8.db";
