rrdproc update option improved

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -2,11 +2,11 @@
 # configuration file for rrdproc
 #
 # for debugging pruposes set $DEBUG = 1, or set environment variable DEBUG=1 
-$DEBUG = 0; 
+$DEBUG = 1; 
 
 %extraopts = (
     windsensor => {
-        rrdfile => "/usr/local/wth/windsensor.rrd"
+        rrdfile => "windsensor.rrd"
     },
     rainsensor => {
         rrdfile => "/proj/wetter/logs/wmr9x8/rainsensor.rrd"
@@ -30,7 +30,7 @@ $DEBUG = 0;
 
 %createopts = ( 
     windsensor => {
-        "--start" => 973709200,
+    "--start" => 1304275000,
         "--step"  => 300,
     },
     rainsensor => {
@@ -282,4 +282,4 @@ $DEBUG = 0;
 
 #@Sensors    = ( "windsensor", "rainsensor", "thin_sensor", "thout_sensor", "thbnew_sensor" );
 @Sensors    = ( "windsensor" );
-$WthDatabase = "/usr/local/wth/wmr9x8.db";
+$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
