rrdproc improved - windsensor update logic OK

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -30,7 +30,7 @@ $DEBUG = 1;
 
 %createopts = ( 
     windsensor => {
-    "--start" => 1304275000,
+    "--start" => 1303851600,
         "--step"  => 300,
     },
     rainsensor => {
@@ -281,5 +281,6 @@ $DEBUG = 1;
 
 
 #@Sensors    = ( "windsensor", "rainsensor", "thin_sensor", "thout_sensor", "thbnew_sensor" );
+#$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
+$WthDatabase = "/usr/local/wth/wmr9x8.db";
 @Sensors    = ( "windsensor" );
-$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
