--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -2,7 +2,7 @@
 # configuration file for rrdproc
 #
 # for debugging pruposes set $DEBUG = 1, or set environment variable DEBUG=1 
-$DEBUG = 1; 
+$DEBUG = 0; 
 
 %extraopts = (
     windsensor => {
@@ -24,13 +24,13 @@ $DEBUG = 1;
         rrdfile => "/proj/wetter/logs/wmr9x8/thb_sensor.rrd"
     },
     thbnew_sensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/thbnew_sensor.rrd"
+        rrdfile => "thbnew_sensor.rrd"
     }
 );
 
 %createopts = ( 
     windsensor => {
-    "--start" => 1303851600,
+        "--start" => 1303851600, 
         "--step"  => 300,
     },
     rainsensor => {
@@ -54,7 +54,7 @@ $DEBUG = 1;
         "--step"  => 300,
     },
     thbnew_sensor => {
-        "--start" => 973709200,
+        "--start" => 1303851600,
         "--step"  => 300,
     }
 );
@@ -283,4 +283,4 @@ $DEBUG = 1;
 #@Sensors    = ( "windsensor", "rainsensor", "thin_sensor", "thout_sensor", "thbnew_sensor" );
 #$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
 $WthDatabase = "/usr/local/wth/wmr9x8.db";
-@Sensors    = ( "windsensor" );
+@Sensors    = ( "windsensor", "thbnew_sensor" );
