umeter adapted so that sensornames and parameternames follow naming rules of rrd datasources

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -281,6 +281,6 @@ $DEBUG = 0;
 
 
 #@Sensors    = ( "windsensor", "rainsensor", "thin_sensor", "thout_sensor", "thbnew_sensor" );
-#$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
-$WthDatabase = "/usr/local/wth/wmr9x8.db";
+$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
+#$WthDatabase = "/usr/local/wth/wmr9x8.db";
 @Sensors    = ( "windsensor", "thbnew_sensor" );
