umeter_rd does not stop after 4-5 read calls

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -6,7 +6,7 @@ $DEBUG = 0;
 
 %extraopts = (
     windsensor => {
-        rrdfile => "windsensor.rrd"
+        rrdfile => "/proj/wetter/logs/wmr9x8/windsensor.rrd"
     },
     rainsensor => {
         rrdfile => "/proj/wetter/logs/wmr9x8/rainsensor.rrd"
@@ -24,13 +24,13 @@ $DEBUG = 0;
         rrdfile => "/proj/wetter/logs/wmr9x8/thb_sensor.rrd"
     },
     thbnew_sensor => {
-        rrdfile => "thbnew_sensor.rrd"
+        rrdfile => "/proj/wetter/logs/wmr9x8/thbnew_sensor.rrd"
     }
 );
 
 %createopts = ( 
     windsensor => {
-        "--start" => 1303851000, 
+        "--start" => 973709200, 
         "--step"  => 300,
     },
     rainsensor => {
