--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -30,31 +30,31 @@ $DEBUG = 0;
 
 %createopts = ( 
     windsensor => {
-        "--start" => 973709200, 
+        "--start" => 1286732801, 
         "--step"  => 300,
     },
     rainsensor => {
-        "--start" => 973709200,
+        "--start" => 1286732801,
         "--step"  => 300,
     },
     thin_sensor => {
-        "--start" => 973709200,
+        "--start" => 1286732801,
         "--step"  => 300,
     },
     thout_sensor => {
-        "--start" => 973709200,
+        "--start" => 1286732801,
         "--step"  => 300,
     },
     tin_sensor => {
-        "--start" => 973709200,
+        "--start" => 1286732801,
         "--step"  => 300,
     },
     thb_sensor => {
-        "--start" => 973709200,
+        "--start" => 1286732801,
         "--step"  => 300,
     },
     thbnew_sensor => {
-        "--start" => 1303851000,
+        "--start" => 1286732801,
         "--step"  => 300,
     }
 );
@@ -78,30 +78,36 @@ $DEBUG = 0;
        "DS:current_rainrate:GAUGE:600:-30:70",
        "DS:total_rainfall:GAUGE:600:0:100",
        "DS:yesterday_rainfall:GAUGE:600:0:100",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
+       "RRA:AVERAGE:0.5:1:576",
+       "RRA:AVERAGE:0.5:6:672",
+       "RRA:AVERAGE:0.5:24:732",
+       "RRA:AVERAGE:0.5:144:1460",
+       "RRA:AVERAGE:0.5:288:1825",
+       "RRA:AVERAGE:0.5:288:7300",
        "RRA:LAST:0.5:1:1" 
     ],
     thin_sensor => [
        "DS:temperature:GAUGE:600:-5:50",
        "DS:humidity:GAUGE:600:25:90",
        "DS:dew_temperature:GAUGE:600:0:49",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
+       "RRA:AVERAGE:0.5:1:576",
+       "RRA:AVERAGE:0.5:6:672",
+       "RRA:AVERAGE:0.5:24:732",
+       "RRA:AVERAGE:0.5:144:1460",
+       "RRA:AVERAGE:0.5:288:1825",
+       "RRA:AVERAGE:0.5:288:7300",
        "RRA:LAST:0.5:1:1" 
     ],
     thout_sensor => [
        "DS:temperature:GAUGE:600:-20:60",
        "DS:humidity:GAUGE:600:25:90",
        "DS:dew_temperature:GAUGE:600:-10:60",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
+       "RRA:AVERAGE:0.5:1:576",
+       "RRA:AVERAGE:0.5:6:672",
+       "RRA:AVERAGE:0.5:24:732",
+       "RRA:AVERAGE:0.5:144:1460",
+       "RRA:AVERAGE:0.5:288:1825",
+       "RRA:AVERAGE:0.5:288:7300",
        "RRA:LAST:0.5:1:1" 
     ],
     tin_sensor => [
@@ -128,10 +134,12 @@ $DEBUG = 0;
        "DS:humidity:GAUGE:600:25:90",
        "DS:dew_temperature:GAUGE:600:0:49",
        "DS:pressure:GAUGE:600:795:1050",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
+       "RRA:AVERAGE:0.5:1:576",
+       "RRA:AVERAGE:0.5:6:672",
+       "RRA:AVERAGE:0.5:24:732",
+       "RRA:AVERAGE:0.5:144:1460",
+       "RRA:AVERAGE:0.5:288:1825",
+       "RRA:AVERAGE:0.5:288:7300",
        "RRA:LAST:0.5:1:1" 
     ]
 );
@@ -285,4 +293,4 @@ $DEBUG = 0;
 #@Sensors    = ( "windsensor", "rainsensor", "thin_sensor", "thout_sensor", "thbnew_sensor" );
 $WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
 #$WthDatabase = "/usr/local/wth/wmr9x8.db";
-@Sensors    = ( "windsensor", "thbnew_sensor" );
+@Sensors    = ( "windsensor", "thbnew_sensor", "rainsensor", "thout_sensor", "thin_sensor" );
