--- a/wth_foundation/wth/trunk/rrdtool/wthrrd.conf
+++ b/wth_foundation/wth/trunk/rrdtool/wthrrd.conf
@@ -6,7 +6,7 @@ $DEBUG = 0;
 
 %extraopts = (
     windsensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/windsensor.rrd"
+        rrdfile => "windsensor.rrd"
     },
     rainsensor => {
         rrdfile => "/proj/wetter/logs/wmr9x8/rainsensor.rrd"
@@ -24,7 +24,7 @@ $DEBUG = 0;
         rrdfile => "/proj/wetter/logs/wmr9x8/thb_sensor.rrd"
     },
     thbnew_sensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/thbnew_sensor.rrd"
+        rrdfile => "thbnew_sensor.rrd"
     }
 );
 
@@ -176,96 +176,111 @@ $DEBUG = 0;
 );
 
 %graphopts = (
-    Indoorsensor => {
-        Pressure => {
+    thbnew_sensor => {
+        pressure => {
           "--start" => -86400,
           "--title"          => "Barometric Pressure",
           "--imgformat"      => "PNG",
-          "--vertical-label" => "[mbar]",
-          "--lower-limit"    => 980,
-          "--upper-limit"    => 1020,
+          "--vertical-label" => "hPa",
+          "--lower-limit"    => 795,
+          "--upper-limit"    => 1075,
           "--width"          => 90,
           "--y-grid"         => "5:4",
           "--units-exponent" => 0,
           graphdefs => [
-               "DEF:Pressure=/proj/wetter/logs/Indoorsensor.rrd:Pressure:AVERAGE",
-               "CDEF:NNPressure=1.055615,Pressure,*",
-               "LINE2:Pressure#00a000:Pressure",
-               "GPRINT:Pressure:AVERAGE:Average %1.2lf\\n"
+               "DEF:pressure=thbnew_sensor.rrd:pressure:AVERAGE",
+               "CDEF:NNPressure=1.055615,pressure,*",
+               "LINE2:pressure#00a000:pressure",
+               "GPRINT:pressure:AVERAGE:Average %1.2lf\\n"
           ]
         },
-        Temperature => {
+        temperature => {
           "--start" => -86400,
           "--title"          => "Temperature",
           "--imgformat"      => "PNG",
-          "--vertical-label" => "[deg Celsius]",
+          "--vertical-label" => "°C",
           "--lower-limit"    => 0,
           "--width"          => 90,
           "--y-grid" => "5:2",
           "--units-exponent" => 0,
           graphdefs => [
-               "DEF:Temperature=/proj/wetter/logs/Indoorsensor.rrd:Temperature:AVERAGE",
-               "LINE2:Temperature#00a000:Temperature",
-               "GPRINT:Temperature:AVERAGE:Average %1.2lf\\n"
+               "DEF:temperature=thbnew_sensor.rrd:temperature:AVERAGE",
+               "LINE2:temperature#00a000:temperature",
+               "GPRINT:temperature:AVERAGE:Average %1.2lf\\n"
           ]
         },
-        Humidity => {
+        humidity => {
           "--start" => -86400,
-          "--title"          => "Humidity",
+          "--title"          => "humidity",
           "--imgformat"      => "PNG",
-          "--vertical-label" => "[% rel.hum.]",
+          "--vertical-label" => "%",
           "--lower-limit"    => 0,
           "--width"          => 90,
           graphdefs => [
-               "DEF:Humidity=/proj/wetter/logs/Indoorsensor.rrd:Humidity:AVERAGE",
-               "LINE2:Humidity#00a000:Humidity",
-               "GPRINT:Humidity:AVERAGE:Average %1.2lf\\n"
+               "DEF:humidity=thbnew_sensor.rrd:humidity:AVERAGE",
+               "LINE2:humidity#00a000:humidity",
+               "GPRINT:humidity:AVERAGE:Average %1.2lf\\n"
           ]
         }
     },
-    Windsensor => {
-        Winddirection => {
+    windsensor => {
+        wind_direction => {
           "--start" => -86400,
           "--title"          => "Winddirection",
           "--imgformat"      => "PNG",
-          "--vertical-label" => "[deg]",
+          "--vertical-label" => "°",
           "--lower-limit"    => 0,
           "--upper-limit"    => 360,
           "--width"          => 90,
-          "--y-grid"         => "5:4",
+          "--y-grid"         => "5:6",
           "--units-exponent" => 0,
           graphdefs => [
-               "DEF:Winddirection=/proj/wetter/logs/Windsensor.rrd:Winddirection:AVERAGE",
-               "LINE2:Winddirection#00a000:Winddirection",
-               "GPRINT:Winddirection:AVERAGE:Average %1.2lf\\n"
+               "DEF:wind_direction=windsensor.rrd:wind_direction:AVERAGE",
+               "LINE2:wind_direction#00a000:wind_direction",
+               "GPRINT:wind_direction:AVERAGE:Average %1.2lf\\n"
           ]
         },
-        Windspeed => {
+        gust_windspeed => {
           "--start" => -86400,
-          "--title"          => "Windspeed",
+          "--title"          => "Gust Windspeed",
           "--imgformat"      => "PNG",
-          "--vertical-label" => "[km/h]",
+          "--vertical-label" => "m/s",
           "--lower-limit"    => 0,
           "--width"          => 90,
           "--y-grid" => "5:2",
           "--units-exponent" => 0,
           graphdefs => [
-               "DEF:Windspeed=/proj/wetter/logs/Windsensor.rrd:Windspeed:AVERAGE",
-               "LINE2:Windspeed#00a000:Windspeed",
-               "GPRINT:Windspeed:AVERAGE:Average %1.2lf\\n"
+               "DEF:gust_windspeed=windsensor.rrd:gust_windspeed:AVERAGE",
+               "LINE2:gust_windspeed#00a000:gust_windspeed",
+               "GPRINT:gust_windspeed:AVERAGE:Average %1.2lf\\n"
           ]
         },
-        Windvariation => {
+        average_windspeed => {
           "--start" => -86400,
-          "--title"          => "Windvariation",
+          "--title"          => "Average Windspeed",
           "--imgformat"      => "PNG",
-          "--vertical-label" => "[deg]",
+          "--vertical-label" => "m/s",
+          "--lower-limit"    => 0,
+          "--width"          => 90,
+          "--y-grid" => "5:2",
+          "--units-exponent" => 0,
+          graphdefs => [
+               "DEF:average_windspeed=windsensor.rrd:average_windspeed:AVERAGE",
+               "LINE2:average_windspeed#00a000:average_windspeed",
+               "GPRINT:average_windspeed:AVERAGE:Average %1.2lf\\n"
+          ]
+        },
+        windchill => {
+          "--start" => -86400,
+          "--title"          => "windchill",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "°",
           "--lower-limit"    => 0,
           "--width"          => 90,
           graphdefs => [
-               "DEF:Windvariation=/proj/wetter/logs/Windsensor.rrd:Windvariation:AVERAGE",
-               "LINE2:Windvariation#00a000:Windvariation",
-               "GPRINT:Windvariation:AVERAGE:Average %1.2lf\\n"
+               "DEF:windchill=windsensor.rrd:windchill:AVERAGE",
+               "LINE2:windchill#00a000:windchill",
+               "GPRINT:windchill:AVERAGE:Average %1.2lf\\n"
           ]
         }
     },
