--- a/wth_foundation/wth/trunk/rrdtool/wthrrd.conf
+++ b/wth_foundation/wth/trunk/rrdtool/wthrrd.conf
@@ -9,19 +9,19 @@ $DEBUG = 0;
         rrdfile => "windsensor.rrd"
     },
     rainsensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/rainsensor.rrd"
+        rrdfile => "rainsensor.rrd"
     },
     thin_sensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/thin_sensor.rrd"
+        rrdfile => "thin_sensor.rrd"
     },
     thout_sensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/thout_sensor.rrd"
+        rrdfile => "thout_sensor.rrd"
     },
     tin_sensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/tin_sensor.rrd"
+        rrdfile => "tin_sensor.rrd"
     },
     thb_sensor => {
-        rrdfile => "/proj/wetter/logs/wmr9x8/thb_sensor.rrd"
+        rrdfile => "thb_sensor.rrd"
     },
     thbnew_sensor => {
         rrdfile => "thbnew_sensor.rrd"
@@ -306,6 +306,6 @@ $DEBUG = 0;
 
 
 #@Sensors    = ( "windsensor", "rainsensor", "thin_sensor", "thout_sensor", "thbnew_sensor" );
-$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
-#$WthDatabase = "/usr/local/wth/wmr9x8.db";
+#$WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
+$WthDatabase = "/usr/local/wth/wmr9x8.db";
 @Sensors    = ( "windsensor", "thbnew_sensor", "rainsensor", "thout_sensor", "thin_sensor" );
