wthrrd last option added

--- a/wth_foundation/wth/trunk/rrdtool/wthrrd.conf
+++ b/wth_foundation/wth/trunk/rrdtool/wthrrd.conf
@@ -30,7 +30,7 @@ $DEBUG = 0;
 
 %createopts = ( 
     windsensor => {
-        "--start" => 1286732801, 
+        "--start" => 946681200, 
         "--step"  => 300,
     },
     rainsensor => {
@@ -38,7 +38,7 @@ $DEBUG = 0;
         "--step"  => 300,
     },
     thin_sensor => {
-        "--start" => 1286732801,
+        "--start" => 946681200,
         "--step"  => 300,
     },
     thout_sensor => {
@@ -72,6 +72,7 @@ $DEBUG = 0;
        "RRA:AVERAGE:0.5:144:1460",
        "RRA:AVERAGE:0.5:288:1825",
        "RRA:AVERAGE:0.5:288:7300",
+       "RRA:AVERAGE:0.5:12:262800",
        "RRA:LAST:0.5:1:1" 
     ],
     rainsensor => [
