cmd thread removed

--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -13,7 +13,7 @@ ifndef ARCH
 endif
 
 OBJDIR  = build_$(ARCH)
-SRCS    = wthd.c ws2000.c pcwsr.c util.c net.c cmd.c sqlite.c onewire.c ds2438.c crcutil.c ioutil.c owerr.c ownetu.c owtrnu.c ds2480ut.c linuxlnk.c owllu.c owsesu.c findtype.c atod26.c temp10.c wmr9x8.c umeter.c
+SRCS    = wthd.c ws2000.c pcwsr.c util.c net.c sqlite.c pgsql.c onewire.c ds2438.c crcutil.c ioutil.c owerr.c ownetu.c owtrnu.c ds2480ut.c linuxlnk.c owllu.c owsesu.c findtype.c atod26.c temp10.c wmr9x8.c umeter.c
 OBJS    = $(patsubst %c, $(OBJDIR)/%o, $(SRCS))
 WTHAPP  = $(OBJDIR)/wthd 
 #$(info $(OBJS))
@@ -31,19 +31,19 @@ bindir = $(prefix)/bin
 ifneq (,$(findstring Darwin,$(ARCH)))
   #$(info This is Darwin)
   include_flags = -I./src -I/usr/local/include -I/opt/local/include -I/usr/include
-  ld_flags = -L/usr/local/lib -L/opt/local/lib -lpthread -lrrd_th 
+  ld_flags = -L/usr/local/lib -L/opt/local/lib -lpthread -lsqlite -lpq 
 endif
 
 ifneq (,$(findstring FreeBSD,$(ARCH)))
   #$(info This is FreeBSD)
   include_flags = -I./src -I./src/1wire/common  -I./src/1wire/lib/userial/shared -I/usr/local/include -I/usr/include
-  ld_flags = -L/usr/local/lib -lpthread -lrrd_th -lsqlite3
+  ld_flags = -L/usr/local/lib -lpthread -lsqlite3 -pg
 endif
 
 ifneq (,$(findstring Linux,$(ARCH)))
   #$(info This is Linux)
   include_flags = -I./src -I./src/1wire/common  -I./src/1wire/lib/userial/shared -I/usr/include -I/usr/local/include
-  ld_flags = -DSQLITE_THREADSAFE=0 -DLINUX -L/usr/local/lib -lpthread -lrrd_th -lsqlite3 
+  ld_flags = -DSQLITE_THREADSAFE=0 -DLINUX -L/usr/local/lib -lpthread -lsqlite3 -lpq
 endif
 
 INCLUDE = $(include_flags)
