nagios check_wth

--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -16,6 +16,8 @@ OBJDIR  = build_$(ARCH)
 SRCS    = wthd.c ws2000.c pcwsr.c util.c sqlite.c pgsql.c onewire.c ds2438.c crcutil.c ioutil.c owerr.c ownetu.c owtrnu.c ds2480ut.c linuxlnk.c owllu.c owsesu.c findtype.c atod26.c temp10.c wmr9x8.c umeter.c
 OBJS    = $(patsubst %c, $(OBJDIR)/%o, $(SRCS))
 WTHAPP  = $(OBJDIR)/wthd 
+READCFG = $(OBJDIR)/readconfig
+
 #$(info $(OBJS))
 
 INSTALL = /usr/bin/install -c
@@ -37,19 +39,28 @@ endif
 ifneq (,$(findstring FreeBSD,$(ARCH)))
   #$(info This is FreeBSD)
   include_flags = -I./src -I./src/1wire/common  -I./src/1wire/lib/userial/shared -I/usr/local/include -I/usr/include
-  ld_flags = -L/usr/local/lib -lpthread -lsqlite3 -pg
+  ld_flags = -L/usr/local/lib -lpthread -lsqlite3 -lpg
 endif
 
 ifneq (,$(findstring Linux,$(ARCH)))
   #$(info This is Linux)
   include_flags = -I./src -I./src/1wire/common  -I./src/1wire/lib/userial/shared -I/usr/include -I/usr/local/include
-  ld_flags = -DSQLITE_THREADSAFE=0 -DLINUX -L/usr/local/lib -lpthread -lsqlite3 -lpq
+  ld_flags = -DSQLITE_THREADSAFE=1 -DLINUX -L/usr/local/lib -lpthread -lsqlite3 -lpq
 endif
 
 INCLUDE = $(include_flags)
 LDFLAGS = $(ld_flags)
 
 all: $(WTHAPP)
+
+readconfig: $(READCFG)
+
+$(READCFG): $(OBJDIR)/readconfig.o
+	$(CC) -g $(LDFLAGS) $(OBJDIR)/readconfig.o -o $@
+
+$(OBJDIR)/readconfig.o: readconfig.c wth.h
+	@mkdir -p build_$(ARCH)
+	$(CC) -I./src -I./src/1wire/common  -I./src/1wire/lib/userial/shared -I/usr/include -I/usr/local/include -c src/readconfig.c -o $(OBJDIR)/readconfig.o
 
 $(OBJDIR)/wthd: $(OBJS)
 	$(CC) -g $(LDFLAGS) $(OBJS) -o $@ 
