rrdproc diverse changes

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -1,7 +1,12 @@
 #
+# rrdproc.conf
+#
 # configuration file for rrdproc
 #
-# for debugging pruposes set $DEBUG = 1, or set environment variable DEBUG=1 
+# for debugging purposes 
+#   set $DEBUG = 1, 
+#   or set environment variable DEBUG=1 
+#
 $DEBUG = 0; 
 
 %extraopts = (
@@ -233,6 +238,6 @@ $DEBUG = 0;
     }
 );
 
-
+$main::GraphOutdir = "/proj/wetter/logs/wmr9x8/";
 $WthDatabase = "/proj/wetter/logs/wmr9x8/wmr9x8.db";
 @Sensors    = ( "windsensor", "thbnew_sensor", "rainsensor", "thout_sensor", "thin_sensor" );
