nagios objects updated with servicegroup

--- a/wth_foundation/wth/trunk/nagios/weatherstation.cfg
+++ b/wth_foundation/wth/trunk/nagios/weatherstation.cfg
@@ -67,3 +67,9 @@ define service{
 	contact_groups		admins
 	}
 
+
+define servicegroup{
+	servicegroup_name	weatherstations
+	alias			Weatherstation Services
+	members			localhost,UMETER,localhost,1WIRE,localhost,WMR9x8,localhost,WS2000
+	}
